# EORA-dev

./: Dockerfile  README.md  alembic.ini  env.template  pyproject.toml
alembic/: env.py
alembic/versions/: 1-8af2d735d922_initial_migration.py  2-6bb3384c416e_loads_data_to_db.py  3-662e485f6e02_add_embedding_column_to_projects.py  4-d38341733b04_fill_embeddings_for_projects.py  5-c6bf9062ee8c_add_rating.py
data/: data_with_tags.json
infra/: docker-compose.yml
parser/: site_parser.py
src/: config.py  loader.py  main.py
src/contants/: constants.py
src/crud/: crud_base.py  project.py  rating.py
src/database/: db.py  db_middleware.py
src/handlers/: message_handlers.py
src/keyboards/: keyboards.py
src/models/: projects.py  rating.py
src/services/: project_service.py  rating_service.py  response_generator.py
src/utils/: utils.py
